--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>华晨宇</title>
     <style>
         img{
@@ -12,11 +12,22 @@
     </style>
 </head>
 <body>
-    <h1>华晨宇</h1>
+    <nav>
+        <ol>
+                <li><a href="#hua">个人简介</a></li>
+                <li><a href="#events">重要事件</a></li>
+                <li><a href="#awards">成就和荣誉</a></li>
+                <li><a href="#works">主要作品</a></li>
+                <li><a href="#pictures">生活照</a></li>
+                <li><a href="#life">生平</a></li>
+        </ol>
+    </nav>
+
+    <h1 id="hua">华晨宇</h1>
     <p>
         华晨宇（1990年2月7日－），中国大陆男歌手、词曲创作人，湖北省十堰出生。    
     </p>
-    <h2>
+    <h2 id="events">
         重要事件
     </h2>
 
@@ -28,7 +39,7 @@
         <li>2018年参加《歌手2018》获得总决赛亚军。</li>
         <li>2020年4月8日发行数字专辑《新世界NEW WORLD》。</li>
     </ul>
-    <h2>
+    <h2 id="awards">
         成就和荣誉
     </h2>
     <ol>
@@ -38,7 +49,7 @@
             <li>1月18日	直通春晚	全国四强	华晨宇</li>
             <li>3月31日	第21届东方风云榜	最佳新锐歌手奖	华晨宇</li>   
     </ol>
-    <h2>
+    <h2 id="works">
         主要作品
     </h2>
     
@@ -64,15 +75,26 @@
                 </tr>
             </tbody>
         </table>
-        <h2>
+        <h2 id="pictures">
             生活照
-        </h2>
-           
-                <div><img width="500" src="images/1.jpg" alt="图一"></div>
-                <div><img width="500" src="images/2.jpg" alt="图二"></div>
-                <div><img width="500" src="images/3.jpg" alt="图三"></div>
+        </h2>      
+                <div>
+                    <a href="images/1.jpg" target="_blank">
+                        <img width="500" src="images/1.jpg" alt="图一">
+                    </a>
+                </div>
+                <div>
+                    <a href="images/2.jpg" target="_blank">
+                        <img width="500" src="images/2.jpg" alt="图二">
+                    </a>
+                </div>
+                <div>
+                    <a href="images/3.jpg" target="_blank">
+                        <img width="500" src="images/3.jpg" alt="图三">
+                    </a>
+                </div>
   
-        <h2> 
+        <h2 id="life"> 
             生平
         </h2>
         <p>
