add picture and update content

--- a/index.html
+++ b/index.html
@@ -14,69 +14,246 @@
 <body>
     <nav>
         <ol>
-                <li><a href="#hua">个人简介</a></li>
-                <li><a href="#events">重要事件</a></li>
+                <li><a href="#hua">出生与求学</a></li>
+                <li><a href="#events">演艺经历</a></li>
                 <li><a href="#awards">成就和荣誉</a></li>
                 <li><a href="#works">主要作品</a></li>
-                <li><a href="#pictures">生活照</a></li>
+                <li><a href="#pictures">演出照</a></li>
                 <li><a href="#life">生平</a></li>
         </ol>
     </nav>
 
     <h1 id="hua">华晨宇</h1>
+    <img width="500" src="images/4.jpg" alt="图片">
     <p>
-        华晨宇（1990年2月7日－），中国大陆男歌手、词曲创作人，湖北省十堰出生。    
+        华晨宇（1990年2月7日－），中国大陆男歌手、词曲创作人，湖北省十堰出生。2014年，毕业于武汉音乐学院通俗声乐演唱与编导专业。
     </p>
     <h2 id="events">
-        重要事件
+        演艺经历
     </h2>
 
-    <ul>
-        <li>2013年参加湖南卫视《快乐男声》获年度总冠军随后发行首张专辑《卡西莫多的礼物》<li>
+    <h3>2013年－2014年</h3>
+        <ul>
+            <li>2013年，华晨宇参加湖南卫视《2013快乐男声》，获得全国总冠军，签约天娱传媒。</li>
+            <li>2013年11月2日至2014年3月15日，华晨宇参与的2013快乐男声全国巡回演唱会先后在北京等11个城市举办。</li>
+            <li>2014年1月11日，直通春晚第二场10进6，凭借《亲爱的小孩》、《爱》率先晋级全国6强。</li>
+            <li>2014年1月18日，直通春晚总决赛，演唱《我》、《洋葱》，成为首位获得2014央视马年春晚邀请函的选手。</li>
+            <li>2014年1月30日，首登央视春晚舞台演唱《在那遥远的地方》。</li>
+            <li>2014年1月31日，在2014北京卫视春晚演唱《We are young》。</li>
+            <li>2014年7月25日，主演的《快乐男声》纪实电影《我就是我》上映。</li>
+            <li>2014年8月15日，发行首专主打歌曲《Why nobody fights》。</li>
+            <li>2014年9月6日至7日，在北京万事达中心(原五棵松体育馆)连开两场个人演唱会。</li>
+            <li>2014年9月19日，首张个人专辑《卡西莫多的礼物》发行。</li>
+        </ul>
+
+    <h3>2015年－2018年</h3>
+        <ul>
+            <li>2015年1月10日，首专的《微光》成为电视剧《何以笙箫默》插曲。</li>
+            <li>2015年3月25日，获QQ音乐巅峰榜年度最佳内地男歌手。</li>
+            <li>2015年6月15日，第二张专辑主打歌《我管你》释出。</li>
+            <li>2015年7月31至8月2日，在上海大舞台连开三场个人演唱会。</li>
+            <li>2016年火星演唱北京站在乐视体育生态中心举办，成为大陆新生代首位开四面台的歌手。</li>
+            <li>2016年12月2日，获2016MAMA亚洲最佳艺人（中国区）奖。</li>
+            <li>2017年年初，前往美国伯克利音乐学院深造。</li>
+            <li>2017年3月14日，三专《H》在京东限量发行。</li>
+            <li>2017年火星演唱会在北京五棵松体育馆连开两场。</li>
+            <li>2017年10月15日，参与录制的《天籁之战》第二季开播。</li>
+            <li>2018年2月8日，出席2018湖南卫视小年夜春晚，并献唱《智商二五零》。</li>
+            <li>2018年3月2日，参加2018湖南卫视元宵喜乐会。</li>
+            <li>2018年4月13日，湖南卫视《歌手2018》华晨宇作为补位歌手参加，是节目开播以来最年轻的补位歌手。</li>
+        </ul>
+
+    <h3>2019年－2021年</h3>
+        <ul>
+            <li>2019年1月1日，通过“华晨宇工作室官方微博”宣告成立个人工作室。</li>
+            <li>2019年1月5日，参与浙江卫视综艺节目《王牌对王牌》第四季，担任常驻嘉宾之一。</li>
+            <li>2019年10月28日，发行与歌迷共同创作的第一首对唱歌曲《与火星的孩子对话》。<li>
+            <li>2019年11月15日起，华晨宇2019火星演唱会于海口五源河体育场连三天开唱。</li>
+            <li>2019年12月4日，华晨宇为忧郁症者撰写的新歌《好想爱这个世界啊》以数字单曲形式于网易云音乐独家发行</li>
+            <li>2020年1月12日，参加2020《王牌对王牌》第五季节目录制。</li>
+            <li>2020年4月8日，数字专辑《新世界NEW WORLD》于网易云音乐独家开启预售。</li>
+            <li>2020年4月24日，获得《歌手·当打之年》总决赛冠军。</li>
+            <li>2021年1月8日，发行专辑《新世界NEW WORLD》。</li>
+        </ul>
+        <br>
+    <h2 id="awards">
+        成就和荣誉
+    </h2>
+    <ol>
+        <li>2013年参加湖南卫视《快乐男声》获年度总冠军随后发行首张专辑《卡西莫多的礼物》</li>
         <li>2015年以《卡西莫多的礼物》专辑获得QQ音乐年度最佳男歌手等奖项.</li>   
         <li>2016年以《卡西莫多的礼物》专辑获得酷音乐亚洲盛典年度最佳专辑。</li>
         <li>2016年获得亚洲新歌榜最佳男歌手奖，同年获得MAMA亚洲最佳艺人奖。</li>
         <li>2018年参加《歌手2018》获得总决赛亚军。</li>
         <li>2020年4月8日发行数字专辑《新世界NEW WORLD》。</li>
-    </ul>
-    <h2 id="awards">
-        成就和荣誉
-    </h2>
-    <ol>
-            <li>9月27日	湖南卫视2013快乐男声	全国总冠军	华晨宇</li>
-            <li>12月8日	第6届音乐风云榜新人盛典	最受欢迎男歌手奖	华晨宇</li>
-            <li>1月15日	2013新浪微博之夜	微博年度星光奖	华晨宇</li>
-            <li>1月18日	直通春晚	全国四强	华晨宇</li>
-            <li>3月31日	第21届东方风云榜	最佳新锐歌手奖	华晨宇</li>   
     </ol>
+   <br>
+   <section>
     <h2 id="works">
         主要作品
     </h2>
-    
+    <h3>专辑</h3>
         <table>
             <thead>
                 <tr>
-                    <th>日期</th>
-                    <th>作品</th>
+                    <th>发行时间</th>
+                    <th>专辑名称</th>
+                    <th>曲目</th>
                 </tr>
             </thead>
             <tbody>           
                 <tr>
-                    <td>2014年9月19日</td>	<td>《卡西莫多的礼物》</td>
+                    <td>2014年9月19日</td>	
+                    <td>《卡西莫多的礼物》</td> 
+                    <td>
+                        <ol>
+                            <li>Why Nobody Fights</li>
+                            <li>微光</li>
+                            <li>Let You Go</li>
+                            <li>烟火里的尘埃</li>
+                            <li>拆弹专家</li>
+                            <li>环游</li>
+                            <li>我们都是孤独的</li>
+                            <li>不朽</li>
+                            <li>卡西莫多的礼物</li>
+                            <li>枕边故事</li>
+                        </ol>
+                    </td>
                 </tr>
                 <tr>
-                    <td>2015年12月15日</td>	<td>《异类》</td>
+                    <td>2015年12月15日</td>	
+                    <td>《异类》</td>
+                    <td>
+                        <ol>
+                            <li>我管你</li>
+                            <li>国王与乞丐</li>
+                            <li>蜉蝣</li>
+                            <li>反义词</li>
+                            <li>异类</li>
+                            <li>逃离乌托邦</li>
+                            <li>世界是个动物园</li>
+                            <li>变相怪杰</li>
+                            <li>写给未来的孩子</li>
+                            <li>地球之盐</li>
+                            <li>忧伤的巨人</li>
+                        </ol>
+                    </td>
                 </tr>
                 <tr>
-                    <td>2017年3月14日</td>	<td>《H》</td>
+                    <td>2017年3月14日</td>	
+                    <td>《H》</td>
+                    <td>
+                        <ol>
+                            <li>Here We Are</li>
+                            <li>巨鹿</li>
+                            <li>To Be Free</li>
+                            <li>For Forever</li>
+                            <li>我离孤单几公里</li>
+                            <li>消失的昨天</li>
+                            <li>造物者</li>
+                            <li>我的滑板鞋2016</li>
+                        </ol>
+                    </td>
                 </tr>
                 <tr>
-                    <td>2020年5月8日</td>	<td>《新世界NEW WORLD》</td>
+                    <td>2020年5月8日</td>	
+                    <td>《新世界NEW WORLD》</td>
+                    <td>A:
+                        <ol>
+                            <li>斗牛</li>
+                            <li>好想爱这个世界啊</li>
+                            <li>疯人院</li>
+                            <li>与火星的孩子对话</li>
+                            <li>七重人格</li>
+                            <li>神树</li>
+                            <li>降临</li>
+                            <li>新世界</li>
+                        </ol>
+                        B:
+                        <ol>
+                            <li>寻</li>
+                            <li>无聊人</li> 
+                            <li>齐天</li>
+                            <li>智商二五零</li>
+                            <li>寒鸦少年</li>
+                            <li>蜡烛(DEMO)</li>
+                        </ol>
+                    </td>
                 </tr>
             </tbody>
         </table>
+    </section>
+    <section>
+    <h3>单曲</h3>
+    <table>
+        <thead>
+            <th>发行日期</th>
+            <th>歌曲名称</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2013年8月9日</td>	<td>《追梦赤子心》</td>
+            </tr>
+            <tr>
+                <td>2013年10月13日</td>	<td>《我和我》</td>
+            </tr>
+            <tr>
+                <td>2013年11月12日</td>	<td>《青春再见》</td>
+            </tr>
+            <tr>
+                <td>2013年11月17日</td>	<td>《Hi!自由》</td>
+            </tr>
+            <tr>
+                <td>2013年12月23日</td>	<td>《趁你还年轻》</td>
+            </tr>
+            <tr>
+                <td>2014年9月9日</td>	<td>《自己的太阳》</td>
+            </tr>
+            <tr>
+                <td>2014年12月3日</td>	<td>《癌》</td>
+            </tr>
+            <tr>
+                <td>2015年2月9日</td>	<td>《就这Young》</td>
+            </tr>
+            <tr>
+                <td>2015年2月20日</td>	<td>《高手归来》</td>
+            </tr>
+            <tr>
+                <td>2016年3月7日</td>	<td>《横冲直撞》</td>
+            </tr>
+            <tr>
+                <td>2016年4月7日</td>	<td>《火星情报局》</td>
+            </tr>
+            <tr>
+                <td>2016年11月8日</td>	<td>《穿心》</td>
+            </tr>
+            <tr>
+                <td>2017年1月8日</td>	<td>《挂彩》</td>
+            </tr>
+            <tr>
+                <td>2017年4月11日</td>	<td>《随我》</td>
+            </tr>
+            <tr>
+                <td>2017年6月15日</td>	<td>《嗨夏》</td>
+            </tr>
+            <tr>
+                <td>2018年6月5日</td>	<td>《夏之旅》</td>
+            </tr>
+            <tr>
+                <td>2019年1月13日</td>	<td>《声希》</td>
+            </tr>
+            <tr>
+                <td>2020年2月25日</td>	<td>《你要相信这不是最后一天》</td>
+            </tr>
+            <tr>
+                <td>2020年4月2日</td>	<td>《渴不停》</td>
+            </tr> 
+        </tbody>
+    </table>
+    </section>
+        <br>
         <h2 id="pictures">
-            生活照
+            演出照
         </h2>      
                 <div>
                     <a href="images/1.jpg" target="_blank">
@@ -98,7 +275,9 @@
             生平
         </h2>
         <p>
-            2013年，华晨宇参加湖南卫视《2013快乐男声》，获得全国总冠军，签约天娱传媒。同年11月2日至2014年3月15日，华晨宇参与的2013快乐男声全国巡回演唱会先后在北京等11个城市举办。2014年1月11日，直通春晚第二场10进6，凭借《亲爱的小孩》、《爱》率先晋级全国6强。1月18日，直通春晚总决赛，演唱《我》、《洋葱》，成为首位获得2014央视马年春晚邀请函的选手。1月30日，首登央视春晚舞台演唱《在那遥远的地方》[3]。1月31日，在2014北京卫视春晚演唱《We are young》。7月25日，主演的《快乐男声》纪实电影《我就是我》上映。8月15日，发行首专主打歌曲《Why nobody fights》。9月6日至7日，在北京万事达中心(原五棵松体育馆)连开两场个人演唱会。9月19日，首张个人专辑《卡西莫多的礼物》发行。
+            1990年2月7日，出生于湖北省十堰市竹山县。
+            2007年至2010年间，就读于武汉育才美术高中。
+            2014年，毕业于武汉音乐学院通俗声乐演唱与编导专业。
         </p>
 </body>
 </html>
